--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <main>
         <div id="todos">
             <div class="pokemon-todos" id="listaPokemon">
-                <div class="pokemon">
+                <!-- <div class="pokemon">
                     <p class="pokemon-id-back">#025</p>
                     <div class="pokemon-imagen">
                         <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/official-artwork/25.png" alt="Pikachu">
@@ -57,30 +57,10 @@
                             <p class="stat">60Kg</p>
                         </div>
                     </div>
-                </div>
-                <div class="pokemon">
-                    <p class="pokemon-id-back">#025</p>
-                    <div class="pokemon-imagen">
-                        <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/official-artwork/25.png" alt="Pikachu">
-                    </div>
-                    <div class="pokemon-info">
-                        <div class="nombre-contenedor">
-                            <p class="pokemon-id">#025</p>
-                            <h2 class="pokemon-nombre">pikachu</h2>
-                        </div>
-                        <div class="pokemon-tipos">
-                            <p class="electric tipo">electric</p>
-                            <p class="fighting tipo">fighting</p>
-                        </div>
-                        <div class="pokemon-stats">
-                            <p class="stat">4m</p>
-                            <p class="stat">60Kg</p>
-                        </div>
-                    </div>
-                </div>
+                </div> -->
             </div>
         </div>
     </main>
-    <script src="./js/main.js"></script>
+    <script src="./main.js"></script>
 </body>
 </html>
